FILE(GLOB sourcefiles "../lagrange/*.f90")

if ( ${BUILD_TYPE} STREQUAL "PARALLEL" OR ${BUILD_TYPE} STREQUAL "NONBLOCKING" )
FILE(GLOB to_remove "../lagrange/halo_plane_shifting_serial.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
else()
#FILE(GLOB to_remove "../lagrange/field_to_particle.f90") # get the complete path
#list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/halo_plane_shifting_i_1d.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/halo_plane_shifting_i.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/halo_plane_shifting_k_1d.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/halo_plane_shifting_k.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/particle_sort.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/particle_send_recv.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/particle_to_field_send_recv_east.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
FILE(GLOB to_remove "../lagrange/particle_to_field_send_recv_north.f90")
list(REMOVE_ITEM sourcefiles ${to_remove})
#FILE(GLOB to_remove "../lagrange/rhs_particle_global_interpolation_1d.f90")
#list(REMOVE_ITEM sourcefiles ${to_remove})
#FILE(GLOB to_remove "../lagrange/rhs_particle_global_interpolation_halo_1_1d.f90")
#list(REMOVE_ITEM sourcefiles ${to_remove})
#FILE(GLOB to_remove "../lagrange/rhs_particle_global_interpolation_halo_2_1d.f90")
#list(REMOVE_ITEM sourcefiles ${to_remove})
#FILE(GLOB to_remove "../lagrange/rhs_particle_global_interpolation_halo_3_1d.f90")
#list(REMOVE_ITEM sourcefiles ${to_remove})
endif()

include_directories(${INCLUDE_DIRS} "../include")

add_library(lagrange STATIC ${sourcefiles})
add_dependencies(lagrange modules)
